--- a/PI Lab.html
+++ b/PI Lab.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      body {
+        cursor: url('img/cla6.cur') , auto;
+      }
+    </style>
     <title>PixeI Lab</title>
     <meta charset="utf-8" />
     <meta name="description" content="Just a demo html file">
