--- a/PI Lab.html
+++ b/PI Lab.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        cursor: url('img/cla6.cur') , auto;
+        cursor: url('pixil-frame-0-_1_.cur') , auto;
       }
     </style>
     <title>PixeI Lab</title>
