--- a/PI Lab.html
+++ b/PI Lab.html
@@ -3,8 +3,7 @@
   <head>
     <style>
       body {
-        cursor: url('pixil-frame-0-_1_.cur') , auto;
-      }
+        cursor: url('img/cla30.png') , auto;}
     </style>
     <title>PixeI Lab</title>
     <meta charset="utf-8" />
