--- a/PI Lab.html
+++ b/PI Lab.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        cursor: url('img/cla30.png') , auto;}
+        cursor: url('cla30.png') , auto;}
     </style>
     <title>PixeI Lab</title>
     <meta charset="utf-8" />
